<resources>
    <string name="app_name">Cavosh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="menu">Menú</string>
    <string name="carrito">Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="welcome_to">Bienvenido a</string>
    <string name="comenzar">Comenzar</string>
    <string name="cavosh">Cavosh</string>
    <string name="lets_get_you_signed_in">!Vamos a iniciar sesión!</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidó su contraseña?</string>
    <string name="login">Ingresar</string>
    <string name="or_login_with">O iniciar sesión con</string>
    <string name="iniciar_sesion_google">Iniciar sesión google</string>
    <string name="iniciar_sesion_facebook">Iniciar sesión facebook</string>
    <string name="iniciar_sesion_apple">Iniciar sesión apple</string>
    <string name="already_have_an_account">¿Ya tienes una cuenta?</string>
    <string name="register_now">Regístrate Ahora</string>
    <string name="full_name">Nombre Completo</string>
    <string name="password_confirm">Confirmar Contraseña</string>
    <string name="lets_get_you_registered">!Vamos a registrarte!</string>
    <string name="or_register_with">O regístrate con</string>
    <string name="login_now">Inicia Sesión Ahora</string>
    <string name="non_account">¿No tienes una cuenta?</string>
    <string name="your_cafe">Tu café:</string>
    <string name="buscar">Buscar</string>
    <string name="buenos_dias">Buenos dias, usuario</string>
    <string name="frecuentemente_ordenados">Frecuentemente ordenados</string>
    <string name="cambiar">Cambiar</string>
    <string name="tu_cafe_ubicacion">Cavosh Cafe \n Legnicka 20, Wroclaw</string>
    <string name="campana_notificacion">Campana Notificacion</string>
    <string name="nuevos_en">Nuevos en</string>
    <string name="boton_buscar">Boton Buscar</string>
</resources>