<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <View
            android:id="@+id/vHeader"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:background="@drawable/sh_bg_police_blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:layout_width="170dp"
            android:layout_height="180dp"
            android:layout_marginEnd="-30dp"
            android:layout_marginTop="-25dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_granos_cafe"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/authTabs"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/lets_get_you_signed_in"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="24sp"
            android:textColor="@color/flesh"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/authTabs"
            />

        <LinearLayout
            android:id="@+id/authTabs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layout_constraintWidth_max="400dp"
            android:background="@drawable/sh_bg_auth_tabs"
            app:layout_constraintBottom_toBottomOf="@+id/vHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vHeader"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTabLogin"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/carmine_pink"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/iniciar_sesion"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:maxLines="1"
                android:paddingHorizontal="4dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTabRegistrar"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/registrar"
                android:textColor="@color/police_blue"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:maxLines="1"
                android:paddingHorizontal="4dp"
                />
        </LinearLayout>
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCorreo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="24dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:endIconMode="clear_text"
            app:layout_constraintWidth_max="400dp"
            app:layout_constraintTop_toBottomOf="@+id/authTabs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/sh_input_bright_gray"
                android:paddingHorizontal="16dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/correo_electronico"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textSize="14sp"
                android:maxLength="50"
                />
            
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="24dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            app:layout_constraintWidth_max="400dp"
            app:layout_constraintTop_toBottomOf="@+id/tilCorreo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/sh_input_bright_gray"
                android:paddingHorizontal="16dp"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textSize="14sp"
                android:maxLength="50"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/forgot_password"
            android:textColor="@color/carmine_pink"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:layout_constraintEnd_toEndOf="@id/tilPassword"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="64dp"
            app:layout_constraintWidth_max="400dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login"
            android:textSize="16sp"
            app:cornerRadius="20dp"
            android:backgroundTint="@color/gunmetal"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
            app:layout_constraintStart_toStartOf="@id/tilPassword"
            app:layout_constraintEnd_toEndOf="@id/tilPassword"
            />

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_marginTop="38dp"
            android:background="@color/peach_velour"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@id/btnLogin"
            />

        <TextView
            android:id="@+id/tvIniciarSesionCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/or_login_with"
            android:textColor="@color/police_blue"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <View
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:layout_marginTop="38dp"
            android:background="@color/peach_velour"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="@id/btnLogin"
            />

        <LinearLayout
            android:id="@+id/socialLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tvIniciarSesionCon"
            app:layout_constraintStart_toStartOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="@id/btnLogin"
            >

            <ImageButton
                android:id="@+id/btnLoginFacebook"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:background="@drawable/sh_bg_btn_social"
                android:contentDescription="@string/iniciar_sesion_facebook"
                android:src="@drawable/ic_facebook"
                />
            <ImageButton
                android:id="@+id/btnLoginGoogle"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/sh_bg_btn_social"
                android:contentDescription="@string/iniciar_sesion_google"
                android:src="@drawable/ic_google_plus"
                />
            <ImageButton
                android:id="@+id/btnLoginApple"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:background="@drawable/sh_bg_btn_social"
                android:contentDescription="@string/iniciar_sesion_apple"
                android:src="@drawable/ic_apple"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/footerRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/socialLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/already_have_an_account"
                android:textColor="@color/police_blue"
                android:textAlignment="textEnd"
                />

            <TextView
                android:id="@+id/tvRegistrarAhora"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/register_now"
                android:textColor="@color/carmine_pink"
                android:clickable="true"
                android:focusable="true"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>