<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/police_blue"
    tools:context=".ui.splash.SplashFragment">

    <ImageView
        android:id="@+id/ivGranosCafe"
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_granos_cafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/ivSplashIlustracion"
        android:layout_width="370dp"
        android:layout_height="300dp"
        android:layout_marginTop="-30dp"
        android:contentDescription="@null"
        android:src="@drawable/img_splash_ilustracion"
        app:layout_constraintTop_toBottomOf="@+id/ivGranosCafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/welcome_to"
        android:textColor="@color/flesh"
        android:fontFamily="@font/poppins_regular"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/ivSplashIlustracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvNombreMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:text="@string/cavosh"
        android:textColor="@color/carmine_pink"
        android:fontFamily="@font/rokkitt_medium"
        android:textSize="78sp"
        app:layout_constraintTop_toBottomOf="@+id/tvBienvenido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnComenzar"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:paddingVertical="20dp"
        android:backgroundTint="@color/gunmetal"
        app:cornerRadius="18dp"
        android:text="@string/comenzar"
        android:fontFamily="@font/poppins_semibold"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>